[project]
name = "fastapi-concepts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]
